master
======

GeventTransport subclasses SocketTransport

In all cases, if a method has 'nowait' argument and an optional callback is
supplied, the method will execute as 'nowait=False', i.e. synchronously


0.5.0
=====

Fix message reading in basic.get

Added optional open_cb kwarg to Connection constructor

Added optional callback to basic.consume for notifications when broker has
registered the consumer

Moved channel state out of ChannelClass and into Channel to fix access problems
after Channel has been cleaned up

Added support for Channel open notification listeners

All AMQP timestamps are in UTC

Most exceptions will now propagate to user code, fixing problems with 
gevent.GreenletExit and SystemExit

Preliminary support for synchronous clients


0.4.5
=====

Fix heartbeat support in event transport


0.4.4
=====

Fix handling of socket timeouts in gevent transport


0.4.3
=====

Client sends heartbeat frames on its own rather than simply replying to ones 
received from the broker


0.4.2
=====

Channel close listeners are now notified before channel local data is cleaned
up

Default to the gevent transport

Removed fixed requirements for libevent or gevent. It is now up to the user to
install the packages corresponding to their preferred transport.


0.4.1
=====

Added a write lock around GeventTransport.write() call to socket.sendall()


0.4.0
=====

Fixed handling of channel closures due to error. This cleaned up several DoS
vulnerabilities, including a lockup in the ChannelPool, unbounded memory 
consumption, and failure to re-use channel ids after max id enumerator
rolled over. Channel cleanup relies on reference counting to ensure a client
can respond to rapid opening and closing of channels.

Fixed failure to always cast GeventTransport.read() return to a bytearray,
which caused problems when reading partial frames.

Fixed failure in GeventTransport to switch to non-blocking socket after
connecting.
