@@ -16,7 +16,7 @@ class ChannelClassTest(Chai):
   def setUp(self):
     super(ChannelClassTest,self).setUp()
     connection = mock()
-    ch = Channel(connection,42)
+    ch = Channel(connection,42, {})
     connection._logger = mock()
     self.klass = ChannelClass( ch )
 
@@ -139,18 +139,18 @@ class ChannelClassTest(Chai):
     writer = mock()
     expect( mock(channel_class, 'Writer') ).returns( writer )
     expect( writer.write_short ).args( 'rcode' )
-    expect( writer.write_shortstr ).args( 'reason' )
+    expect( writer.write_shortstr ).args( ('reason'*60)[:255] )
     expect( writer.write_short ).args( 'cid' )
     expect( writer.write_short ).args( 'mid' )
     expect( mock(channel_class, 'MethodFrame') ).args(42, 20, 40, writer).returns( 'frame' )
     expect( self.klass.send_frame ).args( 'frame' )
     expect( self.klass.channel.add_synchronous_cb ).args( self.klass._recv_close_ok )
 
-    self.klass.close('rcode', 'reason', 'cid', 'mid')
+    self.klass.close('rcode', 'reason'*60, 'cid', 'mid')
     assert_true( self.klass.channel._closed )
     assert_equals( {
         'reply_code'  : 'rcode',
-        'reply_text'  : 'reason',
+        'reply_text'  : 'reason'*60,
         'class_id'    : 'cid',
         'method_id'   : 'mid',
       }, self.klass.channel._close_info )
